Bug #13611 double [TCP DEFAULT] in config.ini crashes ndb_mgmd
Submitted: 29 Sep 2005 16:55 Modified: 13 Oct 2005 14:35
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 5.0? 4.1? OS:
Assigned to: Tomas Ulin Target Version:

[29 Sep 2005 16:55] Tomas Ulin
Description:
 double [TCP DEFAULT] in config.ini crashes ndb_mgmd

How to repeat:
The following sequence in config.ini crashes mgmd:

[TCP DEFAULT]
SendBufferMemory=1M

[API DEFAULT]

[NDB_MGMD DEFAULT]
PortNumber: 2200
DataDir=/var/local/nectar/log

[TCP DEFAULT]
PortNumber: 28002
[29 Sep 2005 18:38] Hartmut Holzgraefe
verified with 4.1.12, ndb_mgmd is killed by an ABORT signal
[10 Oct 2005 10:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/30849
[10 Oct 2005 10:29] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/30850
[10 Oct 2005 13:06] Tomas Ulin
fixed in 4.1.16 and 5.1.15
[13 Oct 2005 14:35] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented in 5.0.15 and 4.1.16 changelogs. Closed.