  Bug #13611  	 double [TCP DEFAULT] in config.ini crashes ndb_mgmd   - Added error printout and nice exit for duplicate default sections